--- a/public/css/ggac.css
+++ b/public/css/ggac.css
@@ -10968,6 +10968,7 @@ body {
   min-height: 400px;
   margin: 0;
   padding: 0;
+  padding-top: 1px;
 }
 #body > div > div .featured {
   height: 463px;
@@ -10980,7 +10981,7 @@ body {
   display: block;
   left: 0;
   position: absolute;
-  top: -112px;
+  top: -113px;
   z-index: 1;
   -moz-transition-property: opacity;
   -moz-transition-duration: 1s;
