--- a/public/less/style/template.less
+++ b/public/less/style/template.less
@@ -348,6 +348,7 @@ body {
 			min-height: 400px;
 			margin: 0;
 			padding: 0;
+			padding-top: 1px;
 			
 			.featured {
 				height: 361px + 102px;
@@ -360,7 +361,7 @@ body {
 					display: block;
 					left: 0;
 					position: absolute;
-					top: -112px;
+					top: -113px;
 					z-index: 1;
 					-moz-transition-property: opacity;
 					-moz-transition-duration: 1s;
