--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -11516,6 +11516,10 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
   text-align: center;
   margin-top: 15px;
 }
+.player.with-controls .player-data {
+  float: left;
+  width: 90%;
+}
 .player .player_summonername,
 .player .player_level {
   float: left;
