--- a/module/GGACTournament/view/ggac-tournament/admin-team/player-warn.phtml
+++ b/module/GGACTournament/view/ggac-tournament/admin-team/player-warn.phtml
@@ -1,6 +1,6 @@
 <?php
 
-/*
+/* 
  * Copyright (C) 2016 schurix
  *
  * This program is free software; you can redistribute it and/or
@@ -18,30 +18,20 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
-namespace GGACTournament\Form\Element\Factory;
+$form = $this->form;
+$onlyMine = $this->onlyMine;
+$player = $this->player;
 
-use GGACTournament\Tournament\Provider;
-use Interop\Container\ContainerInterface;
-use Zend\ServiceManager\AbstractPluginManager;
-
-/**
- * Description of TournamentObjectSelect
- *
- * @author schurix
- */
-class TournamentObjectSelect extends GenericObjectSelectFactory{
-	public function __invoke(ContainerInterface $container, $requestedName, array $options = null) {
-		$elm = parent::__invoke($container, $requestedName, $options);
-		
-		$service = $container;
-		if($service instanceof AbstractPluginManager){
-			$service = $service->getServiceLocator();
-		}
-		
-		$provider = $service->get(Provider::class);
-		$elm->setTournamentProvider($provider);
-		$elm->setDefaultOptions();
-		
-		return $elm;
-	}
+$defaultRouteParams = array('routeStart' => $onlyMine ? 'my-teams' : 'teams');
+if($player->getTeam()){
+	$defaultRouteParams['team_id'] = $player->getTeam()->getId();
 }
+
+$form->prepare();
+$form->setAttribute('action', $this->url('zfcadmin/teams/player/warn', array('player_id' => $player->getId()) + $defaultRouteParams));
+$form->setAttribute('method', 'post');
+?>
+
+<h1><?php echo sprintf($this->translate('Spieler %s verwarnen'), $player->getRegistration()->getSummonerName()) ?></h1>
+
+<?php echo $this->partial('partial/admin_form.phtml', array('formular' => $form));
