--- a/module/GGACTournament/view/ggac-tournament/admin-team/team-comment.phtml
+++ b/module/GGACTournament/view/ggac-tournament/admin-team/team-comment.phtml
@@ -1,6 +1,6 @@
 <?php
 
-/*
+/* 
  * Copyright (C) 2016 schurix
  *
  * This program is free software; you can redistribute it and/or
@@ -18,30 +18,17 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
-namespace GGACTournament\Form\Element\Factory;
+$form = $this->form;
+$onlyMine = $this->onlyMine;
+$team = $this->team;
 
-use GGACTournament\Tournament\Provider;
-use Interop\Container\ContainerInterface;
-use Zend\ServiceManager\AbstractPluginManager;
+$defaultRouteParams = array('routeStart' => $onlyMine ? 'my-teams' : 'teams');
 
-/**
- * Description of TournamentObjectSelect
- *
- * @author schurix
- */
-class TournamentObjectSelect extends GenericObjectSelectFactory{
-	public function __invoke(ContainerInterface $container, $requestedName, array $options = null) {
-		$elm = parent::__invoke($container, $requestedName, $options);
-		
-		$service = $container;
-		if($service instanceof AbstractPluginManager){
-			$service = $service->getServiceLocator();
-		}
-		
-		$provider = $service->get(Provider::class);
-		$elm->setTournamentProvider($provider);
-		$elm->setDefaultOptions();
-		
-		return $elm;
-	}
-}
+$form->prepare();
+$form->setAttribute('action', $this->url('zfcadmin/teams/comment', array('team_id' => $team->getId()) + $defaultRouteParams));
+$form->setAttribute('method', 'post');
+?>
+
+<h1><?php echo sprintf($this->translate('Anmerkung zu %s hinzufügen'), $team->getName()) ?></h1>
+
+<?php echo $this->partial('partial/admin_form.phtml', array('formular' => $form));
