--- a/public/less/style/ggac.less
+++ b/public/less/style/ggac.less
@@ -114,6 +114,11 @@ body {
 	margin-top: 15px;
 }
 
+.player.with-controls .player-data{
+	float: left; 
+	width: 90%;
+}
+
 .player .player_summonername,
 .player .player_level{
     float: left;
