--- a/public/css/ggac.css
+++ b/public/css/ggac.css
@@ -11924,35 +11924,35 @@ body {
   margin-right: -10px;
   padding-top: 3px;
 }
-#body .ergebnisse ul li .article .standings .standing .matches .match {
+#body .ergebnisse ul li .article .matches .match {
   border-bottom: 1px solid gray;
   padding: 4px 10px;
   overflow: auto;
 }
-#body .ergebnisse ul li .article .standings .standing .matches .match.first {
+#body .ergebnisse ul li .article .matches .match.first {
   border-top: 1px solid gray;
 }
-#body .ergebnisse ul li .article .standings .standing .matches .match .position {
+#body .ergebnisse ul li .article .matches .match .position {
   float: left;
   line-height: 48px;
   font-size: 28px;
   width: 50px;
 }
-#body .ergebnisse ul li .article .standings .standing .matches .match .gamedate {
+#body .ergebnisse ul li .article .matches .match .gamedate {
   float: left;
   width: 80px;
   padding: 9px 0;
   line-height: 17px;
   text-align: left;
 }
-#body .ergebnisse ul li .article .standings .standing .matches .match .team {
+#body .ergebnisse ul li .article .matches .match .team {
   background-repeat: no-repeat;
   background-size: 52px;
   background-position-x: left;
   min-height: 52px;
   padding: 2px 2px 2px 58px;
   margin-left: 0px;
-  width: 255px;
+  width: 315px;
   float: left;
 }
 #body .ergebnisse ul li .article .matches .match .team.guest {
