--- a/public/less/style/template.less
+++ b/public/less/style/template.less
@@ -752,6 +752,7 @@ body {
 						}
 						
 						.players{
+							display: block;
 							.player {
 								.player_subborder{
 									border-color: #FFD700;
