--- a/module/GGACLoLTournament/view/layout/ggaclol.phtml
+++ b/module/GGACLoLTournament/view/layout/ggaclol.phtml
@@ -25,7 +25,7 @@
 			<div>
 				<div>
 					<a href="<?php echo $this->url('home') ?>" class="logo"><img src="<?= $this->basePath(); ?>/img/logo.png" alt=""></a>
-					<?php echo $this->navigation('navigation')
+					<?php echo $this->navigation('tournament_navigation')
 									->menu()
 									->setMinDepth(0)
 									->setMaxDepth(0)
