--- a/public/less/style/template.less
+++ b/public/less/style/template.less
@@ -1216,9 +1216,7 @@ body {
 				}
 			}
 		}
-	}
-	
-	.anmeldung {
+		
 		.content{
 			width: 920px;
 			
@@ -1276,6 +1274,21 @@ body {
 					float: left;
 					border: none;
 					
+				}
+			}
+			.match-forms{
+				margin-top: 20px;
+				.clearfix();
+				.match-form{
+					margin-top: 20px;
+					margin-bottom: 20px;
+					.clearfix();
+					fieldset{
+						border: none;
+					}
+					.match-form-form{
+						display: none;
+					}
 				}
 			}
 
